force-app/main/default/objects/Trigger_Config__c/Trigger_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Trigger Config</label>
</CustomObject>