force-app/main/default/objects/Trigger_Config__c/fields/Animal_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Animal_Trigger_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Animal Trigger Enabled</label>
    <type>Checkbox</type>
</CustomField>