force-app/main/default/objects/Trigger_Config__c/fields/Behavior_Evaluation_Trigger_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Behavior_Evaluation_Trigger_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if the Behavior Evaluation Trigger is Enabled or not</description>
    <inlineHelpText>Set to &apos;True&apos; to enable Behavior Evaluation Trigger</inlineHelpText>
    <label>Behavior Evaluation Trigger Enabled</label>
    <type>Checkbox</type>
</CustomField>