force-app/main/default/objects/Trigger_Config__c/fields/Disable_Case_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Case_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Case Trigger</label>
    <type>Checkbox</type>
</CustomField>