force-app/main/default/objects/Trigger_Config__c/fields/Disable_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Disable_Triggers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CHECKING THIS BOX DISABLES ALL TRIGGER PROCESSING</description>
    <inlineHelpText>CHECKING THIS BOX DISABLES ALL TRIGGER PROCESSING</inlineHelpText>
    <label>Disable Triggers</label>
    <type>Checkbox</type>
</CustomField>